RESOLVED FIXED244375
[LFC][IFC] Fix shouldApplyTrailingWhiteSpaceFollowedByBRQuirk
https://bugs.webkit.org/show_bug.cgi?id=244375
Summary [LFC][IFC] Fix shouldApplyTrailingWhiteSpaceFollowedByBRQuirk
alan
Reported 2022-08-25 21:02:27 PDT
it only applies when content is not overflowing.
Attachments
Patch (5.08 KB, patch)
2022-08-25 21:12 PDT, alan
no flags
Patch (7.72 KB, patch)
2022-08-26 06:41 PDT, alan
no flags
alan
Comment 1 2022-08-25 21:12:26 PDT
alan
Comment 2 2022-08-26 06:41:20 PDT
EWS
Comment 3 2022-08-26 09:42:00 PDT
Committed 253822@main (2e399ead6a22): <https://commits.webkit.org/253822@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461880 [details].
Radar WebKit Bug Importer
Comment 4 2022-08-26 09:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.