[LFC][IFC] Fix shouldApplyTrailingWhiteSpaceFollowedByBRQuirk https://bugs.webkit.org/show_bug.cgi?id=244375

Reviewed by Antti Koivisto.

shouldApplyTrailingWhiteSpaceFollowedByBRQuirk only applies when the content is not overflowing the line.
When we don't trim this whitespace content in quirk mode:
1. the root inline box gets marked as "has content"
2. "has content" inline boxes affect the line box height
3. line box gets stretched by the root inline box (in this case by the descent).
-> block box becomes 4px taller.

* LayoutTests/fast/text/legacy-trailing-br-quirk-with-overflowing-content-expected.html: Added.
* LayoutTests/fast/text/legacy-trailing-br-quirk-with-overflowing-content.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::close):
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:

Canonical link: https://commits.webkit.org/253822@main